k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules: 
  - host: "ingress.adatechnology.dev"
    http: 
      paths: 
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nodejs-server-service
            port:
              number: 80
  tls:
    - hosts:
      - "ingress.adatechnology.dev"
      secretName: letsencrypt-tls
